--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
+
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
 body{
-    background-color: rgb(178, 34, 166);
+    background-color:#B3B2AE;
+}
+
+.container-fluid{
+    background-color:#5D6363;
+    height: 50px;
+    font-family:'Libre Baskerville', serif;  
+}
+
+.carousel-inner{
+    padding: auto;
+    margin: auto;
+
 }
